compiler/tests/fail/stack_allocation/x86-64/return_ptr_local.jazz
export fn main () -> reg ptr u32[1] {
  stack u32[1] s;
  s[0] = 0;
  reg mut ptr u32[1] r = s;
  return r;
}
